<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mymanagement</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">User Name</string>
    <string name="Location">Location</string>
    <string name="Type">Type</string>
    <string name="Picture">Picture</string>
    <string name="snap">Take Snap</string>
    <string name="save">SAVE</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="update">Update</string>
    <string name="nTYpe">Take New Snap</string>

</resources>